# chess

./: .gitignore  TODO.md  __init__.py  __main__.py  board.py  check_users.py  chess.py  clarification_request.md  explanation_en_passant.md  game.py  migrate_db.py  move.py  move_utils.py  pyproject.toml  reproduce_db_issue.py  requirements.txt  square.py  start_prod.sh
backend/: chess.db-shm  chess.db-wal  database.py  engine.py  main.py  rating.py  schemas.py  state.py
chess/: __main__.py  board.py  coordinate.py  enums.py  game.py  move.py  square.py
chess_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend/: package-lock.json  package.json
oop_chess/: __main__.py  bitboard.py  board.py  enums.py  exceptions.py  fen_helpers.py  game.py  game_state.py  move.py  rules.py  square.py
piece/: color.py  pawn.py  piece.py  rook.py
pieces/: __init__.py  bishop.py  king.py  knight.py  movement.py  pawn.py  piece.py  queen.py  rook.py
scripts/: restart_local_backend.sh  run_e2e_tests.sh  safe_push.sh
tests/: conftest.py  diagnose_ambiguous_king.py  example_games.pgn  test_antichess.py  test_board.py  test_check.py  test_checkmate.py  test_chess_091c9fb3d970414a80ecbcae33071326.db-shm  test_chess_091c9fb3d970414a80ecbcae33071326.db-wal  test_chess_0b2c32c28c314840b65d3bf9a3286609.db-shm  test_chess_0b2c32c28c314840b65d3bf9a3286609.db-wal  test_chess_122266c91de242e1af474c2f91790fdf.db-shm  test_chess_122266c91de242e1af474c2f91790fdf.db-wal  test_chess_16fa03fa2e9a47e68979ce5d30d2b4b2.db-shm  test_chess_16fa03fa2e9a47e68979ce5d30d2b4b2.db-wal  (+41 more)
(+425 files in other folders)
