[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-engine"
version = "0.1.0"
description = "FastAPI & React webapp for a chess engine."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools.packages]
find = {}
