[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v_chess-engine"
version = "0.1.0"
description = "FastAPI & React webapp for a chess engine."
readme = "README.md"
requires-python = ">=3.9"


[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
